--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,7 +9,7 @@ include .coverage.rc
 include tsconfig.json
 include package.json
 include webpack.config.js
-include custom_ipywidget_example/labextension/*.tgz
+include myproject/labextension/*.tgz
 
 # Documentation
 graft docs
@@ -26,7 +26,7 @@ graft tests
 prune tests/build
 
 # Javascript files
-graft custom_ipywidget_example/nbextension
+graft myproject/nbextension
 graft src
 graft css
 prune **/node_modules
