--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-testpaths = custom_ipywidget_example/tests examples
+testpaths = myproject/tests examples
 norecursedirs = node_modules .ipynb_checkpoints
 addopts = --nbval --current-env
