--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 requires = [
     "hatchling>=1.3.1",
     "jupyterlab==3.*",
+    "pyzmq<24.0.0"
 ]
 build-backend = "hatchling.build"
 
@@ -33,6 +34,7 @@ classifiers = [
 ]
 dependencies = [
     "ipywidgets>=7.0.0",
+    "pyzmq<24.0.0"
 ]
 version = "0.1.0.dev0"
 
