Use displayed event to trigger a change in the rendered output

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "jsx": "react",
     "declaration": true,
     "esModuleInterop":true,
     "lib": ["es2015", "dom"],
